updated static template

--- a/src/main/resources/swagger-static/index.mustache
+++ b/src/main/resources/swagger-static/index.mustache
@@ -33,12 +33,12 @@
     		{{#apis}}
         <div class="section-box">
           <div class="section-header">
-            <a href="#!/{{className}}">{{className}}</a>
+            <a href="#!/{{classname}}">{{classname}}</a>
           </div>
           <ul>
 			      {{#operations}}
 			      {{#operation}}
-            <li><a href="#!/{{className}}#{{nickname}}">{{nickname}}</a></li>
+            <li><a href="#!/{{classname}}#{{nickname}}">{{nickname}}</a></li>
             {{/operation}}
             {{/operations}}
           </ul>
