--- a/src/main/resources/android-java/api.mustache
+++ b/src/main/resources/android-java/api.mustache
@@ -2,10 +2,14 @@ package {{package}};
 
 import {{invokerPackage}}.ApiException;
 import {{invokerPackage}}.ApiInvoker;
+
+import {{modelPackage}}.*;
+
 {{#imports}}import {{import}};
 {{/imports}}
 
-import java.util.*;
+import java.util.Map;
+import java.util.HashMap;
 import java.io.File;
 
 {{#operations}}
