--- a/src/main/resources/swagger-static/operation.mustache
+++ b/src/main/resources/swagger-static/operation.mustache
@@ -18,9 +18,31 @@
   <ul>
   	{{#allParams}}
 	  <div class="parameter">
+      {{#isContainer}}
+        {{#complexType}}
+          <!-- container / complex -->
+        {{/complexType}}
+        {{#simpleType}}
+          <!-- container / simple -->
+      <div class="param">{{paramName}}&nbsp;:&nbsp;{{dataType}}&nbsp;({{type}})</div>
+        <span>{{#optional}}optional{{/optional}}</span>
+      </div>
+        {{/simpleType}}
+      {{/isContainer}}
+      {{#isNotContainer}}
+        {{#simpleType}}
+          <!-- not container / simple -->
+      <div class="param">{{paramName}}&nbsp;:&nbsp;{{dataType}}&nbsp;({{type}})</div>
+        <span>{{#optional}}optional{{/optional}}</span>
+      </div>
+        {{/simpleType}}
+      {{/isNotContainer}}
+
+      {{#foo}}
 	    <div class="param">{{paramName}}&nbsp;:&nbsp;{{#complexType}}&nbsp;<div class="model" id="{{complexType}}"><a href="#">{{dataType}}</a>{{/complexType}}{{#simpleType}}{{dataType}}{{/simpleType}}&nbsp;({{type}})</div>
 	      <span>{{#optional}}optional{{/optional}}</span>
 	    </div>
+      {{/foo}}
 	    <p class="param-description">{{description}}</p>
 	  </div>
     {{/allParams}}
