--- a/src/main/resources/scala/model.mustache
+++ b/src/main/resources/scala/model.mustache
@@ -7,7 +7,7 @@ package {{package}}
 
 {{#model}}
 
-case class {{classname}} (
+class {{classname}} (
   {{#vars}}
 
   {{#description}}/* {{{description}}} */
