--- a/src/main/resources/asyncscala/sbt.mustache
+++ b/src/main/resources/asyncscala/sbt.mustache
@@ -2,10 +2,10 @@ organization := "{{package}}"
 
 name := "{{projectName}}-client"
 
-libraryDependencies += "com.wordnik.swagger" %% "swagger-async-httpclient" % "0.3.0-WN5"
+libraryDependencies += "com.wordnik.swagger" %% "swagger-async-httpclient" % "0.3.5"
 
-libraryDependencies += "joda-time" % "joda-time" % "2.3"
+libraryDependencies += "joda-time" % "joda-time" % "2.5"
 
-libraryDependencies += "org.joda" % "joda-convert" % "1.3.1"
+libraryDependencies += "org.joda" % "joda-convert" % "1.7"
 
-libraryDependencies += "ch.qos.logback" % "logback-classic" % "1.0.13" % "provided"
+libraryDependencies += "ch.qos.logback" % "logback-classic" % "1.1.2" % "provided"
