--- a/src/main/resources/objc/api-body.mustache
+++ b/src/main/resources/objc/api-body.mustache
@@ -58,6 +58,7 @@ static NSString * basePath = @"{{basePath}}";
         {{#returnBaseType}}{{#hasParams}}completionHandler: {{/hasParams}}(void (^)({{returnType}} output, NSError* error))completionBlock{{/returnBaseType}}
         {{^returnBaseType}}{{#hasParams}}completionHandler: {{/hasParams}}(void (^)(NSError* error))completionBlock{{/returnBaseType}} {
 
+    id m_body = {{#bodyParam}}{{paramName}}{{/bodyParam}}{{^bodyParam}}nil{{/bodyParam}};
     NSMutableString* requestUrl = [NSMutableString stringWithFormat:@"%@{{path}}", basePath];
 
     // remove format in URL if needed
@@ -79,9 +80,9 @@ static NSString * basePath = @"{{basePath}}";
 
     id bodyDictionary = nil;
     {{#bodyParam}}
-    if(body != nil && [body isKindOfClass:[NSArray class]]){
+    if(m_body != nil && [m_body isKindOfClass:[NSArray class]]){
         NSMutableArray * objs = [[NSMutableArray alloc] init];
-        for (id dict in (NSArray*)body) {
+        for (id dict in (NSArray*)m_body) {
             if([dict respondsToSelector:@selector(asDictionary)]) {
                 [objs addObject:[(SWGObject*)dict asDictionary]];
             }
@@ -91,25 +92,25 @@ static NSString * basePath = @"{{basePath}}";
         }
         bodyDictionary = objs;
     }
-    else if([body respondsToSelector:@selector(asDictionary)]) {
-        bodyDictionary = [(SWGObject*)body asDictionary];
+    else if([m_body respondsToSelector:@selector(asDictionary)]) {
+        bodyDictionary = [(SWGObject*)m_body asDictionary];
     }
-    else if([body isKindOfClass:[NSString class]]) {
+    else if([m_body isKindOfClass:[NSString class]]) {
         // convert it to a dictionary
         NSError * error;
-        NSString * str = (NSString*)body;
+        NSString * str = (NSString*)m_body;
         NSDictionary *JSON =
             [NSJSONSerialization JSONObjectWithData:[str dataUsingEncoding:NSUTF8StringEncoding]
                                             options:NSJSONReadingMutableContainers
                                               error:&error];
         bodyDictionary = JSON;
     }
-    else if([body isKindOfClass: [SWGFile class]]) {
+    else if([m_body isKindOfClass: [SWGFile class]]) {
         requestContentType = @"form-data";
-        bodyDictionary = body;
+        bodyDictionary = m_body;
     }
     else{
-        NSLog(@"don't know what to do with %@", body);
+        NSLog(@"don't know what to do with %@", m_body);
     }
 
     {{/bodyParam}}
