--- a/src/main/resources/android-java/api.mustache
+++ b/src/main/resources/android-java/api.mustache
@@ -5,6 +5,8 @@ import {{invokerPackage}}.ApiInvoker;
 
 import {{modelPackage}}.*;
 
+import java.util.*;
+
 {{#imports}}import {{import}};
 {{/imports}}
 
