--- a/src/main/resources/python/api.mustache
+++ b/src/main/resources/python/api.mustache
@@ -58,6 +58,8 @@ class {{classname}}(object):
 
         queryParams = {}
         headerParams = {}
+        $headerParams['Accept'] = '{{#produces}}{{mediaType}}{{#hasMore}},{{/hasMore}}{{/produces}}';
+        $headerParams['Content-Type'] = '{{#consumes}}{{mediaType}}{{#hasMore}},{{/hasMore}}{{/consumes}}';
 
         {{#queryParams}}
         if ('{{paramName}}' in params):
