Made model class to case class again

--- a/src/main/resources/scala/model.mustache
+++ b/src/main/resources/scala/model.mustache
@@ -7,7 +7,7 @@ package {{package}}
 
 {{#model}}
 
-class {{classname}} (
+case class {{classname}} (
   {{#vars}}
 
   {{#description}}/* {{{description}}} */
