--- a/src/main/resources/JavaJaxRS/web.mustache
+++ b/src/main/resources/JavaJaxRS/web.mustache
@@ -45,7 +45,7 @@
   </servlet-mapping>
   <filter>
     <filter-name>ApiOriginFilter</filter-name>
-    <filter-class>com.wordnik.api.ApiOriginFilter</filter-class>
+    <filter-class>{{apiPackage}}.ApiOriginFilter</filter-class>
   </filter>
   <filter-mapping>
     <filter-name>ApiOriginFilter</filter-name>
