--- a/src/main/resources/scala/model.mustache
+++ b/src/main/resources/scala/model.mustache
@@ -2,17 +2,16 @@ package {{package}}
 
 {{#imports}}import {{import}}
 {{/imports}}
+import com.fasterxml.jackson.annotation.{JsonProperty, JsonCreator}
 
 {{#models}}
-
 {{#model}}
-
-class {{classname}} (
+class {{classname}} @JsonCreator() (
   {{#vars}}
 
   {{#description}}/* {{{description}}} */
   {{/description}}
-  _{{name}}: {{datatype}}{{#hasMore}},{{newline}}  {{/hasMore}}
+  @JsonProperty("{{name}}") _{{name}}: {{datatype}}{{#hasMore}},{{newline}}  {{/hasMore}}
   {{/vars}})
 {
   {{#vars}}
