Require the JsonMapper to not include null fields

--- a/src/main/resources/Java/JsonUtil.mustache
+++ b/src/main/resources/Java/JsonUtil.mustache
@@ -4,6 +4,7 @@ import com.fasterxml.jackson.annotation.*;
 import com.fasterxml.jackson.databind.*;
 import com.fasterxml.jackson.databind.annotation.JsonSerialize;
 import com.fasterxml.jackson.core.JsonGenerator.Feature;
+import com.fasterxml.jackson.annotation.JsonInclude;
 
 import com.fasterxml.jackson.datatype.joda.*;
 
@@ -14,6 +15,7 @@ public class JsonUtil {
   	mapper = new ObjectMapper();
 	  mapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
 	  mapper.disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
+      mapper.setSerializationInclusion(JsonInclude.Include.NON_NULL);
 	  mapper.registerModule(new JodaModule());
 	}
 
