fix JaxRS code gen to only generated @PATH annotation on a given resource function when that function is a "sub resource" (e.g. @PATH("/{id}") or @PATH("/{id}/operation")

--- a/src/main/resources/JavaJaxRS/api.mustache
+++ b/src/main/resources/JavaJaxRS/api.mustache
@@ -20,7 +20,7 @@ import javax.ws.rs.*;
 public class {{classname}} {
   {{#operation}}
   @{{httpMethod}}
-  @Path("{{path}}")
+  {{#subresourceOperation}}@Path("{{path}}"){{/subresourceOperation}}
   @ApiOperation(value = "{{{summary}}}", notes = "{{{notes}}}", response = {{{returnType}}}.class{{#returnContainer}}, responseContainer = "{{{returnContainer}}}"{{/returnContainer}})
   @ApiResponses(value = { {{#responses}}
     @ApiResponse(code = {{{code}}}, message = "{{{message}}}"){{#hasMore}},
