--- a/src/main/resources/python3/swagger.mustache
+++ b/src/main/resources/python3/swagger.mustache
@@ -139,6 +139,8 @@ class ApiClient:
         r'^\d\d\d\d-\d\d-\d\d([Tt])\d\d:\d\d:\d\d(\.\d+)?(([Zz])|(\+|-)\d\d:?\d\d)$')
 
     def _parseDatetime(self, d):
+        if d is None:
+            return None
         m = ApiClient._iso8601Regex.match(d)
         timesep, microsecond, offset, zulu, plusminus = m.groups()
         format = self._iso8601Format(timesep, microsecond, zulu)
