--- a/src/main/resources/python/api.mustache
+++ b/src/main/resources/python/api.mustache
@@ -31,7 +31,7 @@ class {{classname}}(object):
 
     {{newline}}
     {{#operation}}
-    def {{nickname}}(self, {{#requiredParams}}{{paramName}}{{#defaultValue}} = None{{/defaultValue}}, {{/requiredParams}}**kwargs):
+    def {{nickname}}(self, {{#requiredParams}}{{paramName}}{{#defaultValue}}={{{defaultValue}}}{{/defaultValue}}, {{/requiredParams}}**kwargs):
         """{{summary}}
 
         Args:
