Rework PHP function comments to match PHPDoc style.
Also eliminated bad newline.

--- a/src/main/resources/php/api.mustache
+++ b/src/main/resources/php/api.mustache
@@ -27,12 +27,12 @@ class {{classname}} {
 	}
 
   {{#operation}}
-	/**
-	 * {{nickname}}
-	 * {{summary}}
+  /**
+   * {{nickname}}
+   * {{summary}}
+   * 
    {{#allParams}}
-   * {{paramName}}, {{dataType}}: {{description}} {{^optional}}(required){{/optional}}{{#optional}}(optional){{/optional}}
-   {{newline}}
+   * @param {{dataType}} ${{paramName}} {{description}} ({{^optional}}required{{/optional}}{{#optional}}optional{{/optional}})
    {{/allParams}}
 	 * @return {{returnType}}
 	 */
