building a fix for postData that will pass TravisCI build

--- a/src/main/resources/php/Swagger.mustache
+++ b/src/main/resources/php/Swagger.mustache
@@ -66,7 +66,7 @@ class APIClient {
 		}
 
 		if (is_object($postData) or is_array($postData)) {
-			$postData = http_build_query($this->sanitizeForSerialization($postData));
+			$postData = json_encode($this->sanitizeForSerialization($postData));
 		}
 
 		$url = $this->apiServer . $resourcePath;
