Changed the "params" operation property to "parameters" to conform to the swagger spec

--- a/samples/server-generator/node/templates/api.mustache
+++ b/samples/server-generator/node/templates/api.mustache
@@ -24,7 +24,7 @@ exports.{{nickname}} = {
     "notes" : "{{{notes}}}",
     "summary" : "{{{summary}}}",
     "method": "{{httpMethod}}",
-    "params" : [{{#queryParams}}
+    "parameters" : [{{#queryParams}}
       params.query("{{paramName}}", "{{description}}", "{{swaggerDataType}}", {{required}}, {{allowMultiple}}, "{{{allowableValues}}}"{{#defaultValue}}, {{{defaultValue}}}{{/defaultValue}}){{#hasMore}},{{/hasMore}}
     {{/queryParams}}].concat([{{#pathParams}}
       params.path("{{paramName}}", "{{description}}"){{#hasMore}},{{/hasMore}}
