--- a/src/main/resources/python/api.mustache
+++ b/src/main/resources/python/api.mustache
@@ -59,7 +59,10 @@ class {{classname}}(object):
         queryParams = {}
         headerParams = {}
         formParams = {}
+        files = []
         bodyParam = None
+
+        headerParams['Content-type'] = '{{#consumes}}{{mediaType}}{{#hasMore}},{{/hasMore}}{{/consumes}}'
 
         {{#queryParams}}
         if ('{{paramName}}' in params):
@@ -80,10 +83,14 @@ class {{classname}}(object):
 
         {{#formParams}}
         if ('{{paramName}}' in params):
+            {{#notFile}}
             formParams['{{paramName}}'] = params['{{paramName}}']
+            {{/notFile}}
+            {{#isFile}}
+            files.append(('{{paramName}}', params['{{paramName}}']))
+            {{/isFile}}
         {{/formParams}}
-        if formParams:
-            headerParams['Content-type'] = 'application/x-www-form-urlencoded'
+        {{newline}}
 
         {{#bodyParam}}
         if ('{{paramName}}' in params):
@@ -93,7 +100,7 @@ class {{classname}}(object):
         postData = (formParams if formParams else bodyParam)
 
         response = self.apiClient.callAPI(resourcePath, method, queryParams,
-                                          postData, headerParams)
+                                          postData, headerParams, files=files)
 
         {{#returnType}}
         if not response:
